[gd_scene load_steps=13 format=3 uid="uid://c5unlttjsx31m"]

[ext_resource type="TileSet" uid="uid://bjtphgbwnhelx" path="res://Assets/bgtiles.tres" id="1_5bckq"]
[ext_resource type="Script" path="res://Scenes/level_15.gd" id="1_kgckv"]
[ext_resource type="Texture2D" uid="uid://dg5sqo4p577la" path="res://Assets/bgtileblack.png" id="2_tkhbd"]
[ext_resource type="TileSet" uid="uid://5txfr7411rug" path="res://Assets/maptiles.tres" id="2_x0mki"]
[ext_resource type="PackedScene" uid="uid://bci7tjxoe75mn" path="res://Scenes/finish_flag.tscn" id="3_b4raj"]
[ext_resource type="PackedScene" uid="uid://b0v3q47ijiww8" path="res://Scenes/boundaries.tscn" id="4_1yse3"]
[ext_resource type="PackedScene" uid="uid://b2ku6ali5xjaw" path="res://Scenes/character_1.tscn" id="4_et8nv"]
[ext_resource type="PackedScene" uid="uid://rfxd6a0f3352" path="res://Scenes/character_2.tscn" id="5_e4x80"]
[ext_resource type="PackedScene" uid="uid://bprhrk6k0kxun" path="res://Scenes/key.tscn" id="5_y44ej"]
[ext_resource type="PackedScene" uid="uid://bgmlveeipn3us" path="res://Scenes/ui.tscn" id="6_hdfye"]
[ext_resource type="PackedScene" uid="uid://cubfh7d0hv168" path="res://Scenes/key_box.tscn" id="6_tmlms"]
[ext_resource type="PackedScene" uid="uid://bq8up7abfprtu" path="res://Scenes/wall.tscn" id="9_bhnom"]

[node name="Level15" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgckv")

[node name="tilingBG" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
texture = ExtResource("2_tkhbd")
stretch_mode = 1

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -640.0
offset_right = 720.0
offset_bottom = 152.0
grow_vertical = 2

[node name="BG" type="TileMap" parent="Control"]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("1_5bckq")
format = 2
layer_0/tile_data = PackedInt32Array(0, 589824, 0, 1, 655360, 0, 2, 720896, 0, 65536, 589824, 0, 65537, 655360, 0, 65538, 720896, 0, 131072, 589824, 0, 131073, 655360, 0, 131074, 720896, 0, 196608, 589824, 0, 196609, 655360, 0, 196610, 720896, 0, 262144, 589824, 1, 262145, 655360, 1, 262146, 720896, 1, 327680, 589824, 2, 327681, 655360, 2, 327682, 720896, 2, 393216, 589824, 3, 393217, 655360, 3, 393218, 720896, 3, 458752, 720896, 3, 458753, 720896, 3, 458754, 720896, 3, 524288, 589824, 2, 524289, 655360, 2, 524290, 720896, 2, 3, 589824, 0, 4, 655360, 0, 5, 720896, 0, 65539, 589824, 0, 65540, 655360, 0, 65541, 720896, 0, 131075, 589824, 0, 131076, 655360, 0, 131077, 720896, 0, 196611, 589824, 0, 196612, 655360, 0, 196613, 720896, 0, 262147, 589824, 1, 262148, 655360, 1, 262149, 720896, 1, 327683, 589824, 2, 327684, 655360, 2, 327685, 720896, 2, 393219, 589824, 3, 393220, 655360, 3, 393221, 720896, 3, 458755, 720896, 3, 458756, 720896, 3, 458757, 720896, 3, 524291, 589824, 2, 524292, 655360, 2, 524293, 720896, 2, 6, 589824, 0, 7, 655360, 0, 8, 720896, 0, 65542, 589824, 0, 65543, 655360, 0, 65544, 720896, 0, 131078, 589824, 0, 131079, 655360, 0, 131080, 720896, 0, 196614, 589824, 0, 196615, 655360, 0, 196616, 720896, 0, 262150, 589824, 0, 262151, 589824, 1, 262152, 655360, 1, 327686, 589824, 2, 327687, 655360, 2, 327688, 720896, 2, 393222, 589824, 3, 393223, 655360, 3, 393224, 720896, 3, 458758, 720896, 3, 458759, 720896, 3, 458760, 720896, 3, 524294, 589824, 2, 524295, 655360, 2, 524296, 720896, 2, 9, 589824, 0, 10, 720896, 0, 65545, 589824, 0, 65546, 720896, 0, 131081, 589824, 0, 131082, 720896, 0, 196617, 589824, 0, 196618, 655360, 0, 262153, 589824, 1, 262154, 655360, 1, 327689, 589824, 2, 327690, 655360, 2, 393225, 720896, 3, 393226, 720896, 3, 458761, 720896, 3, 458762, 720896, 3, 524297, 720896, 3, 524298, 720896, 3, 589824, 589824, 3, 655360, 589824, 3, 589825, 589824, 3, 655361, 589824, 3, 720897, 589824, 3, 589826, 589824, 3, 655362, 589824, 3, 720898, 589824, 3, 589827, 589824, 3, 655363, 589824, 3, 720899, 589824, 3, 589828, 589824, 3, 655364, 589824, 3, 720900, 589824, 3, 589829, 589824, 3, 655365, 589824, 3, 720901, 655360, 3, 589830, 589824, 3, 655366, 589824, 3, 720902, 589824, 3, 589831, 589824, 3, 655367, 589824, 3, 720903, 589824, 3, 589832, 589824, 3, 655368, 589824, 3, 720904, 589824, 3, 589833, 589824, 3, 655369, 589824, 3, 720905, 589824, 3, 589834, 589824, 3, 655370, 589824, 3, 720906, 589824, 3, 589835, 589824, 3, 655371, 589824, 3, 720907, 589824, 3, 524299, 720896, 3, 458763, 720896, 3, 393227, 720896, 3, 131083, 720896, 0, 11, 720896, 0, 65547, 720896, 0, 720896, 655360, 3, 196619, 720896, 0, 262155, 720896, 1, 327691, 720896, 2)

[node name="TileMap" type="TileMap" parent="Control"]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("2_x0mki")
format = 2
layer_0/name = "Dets"
layer_0/tile_data = PackedInt32Array(131078, 262146, 1, 196614, 262146, 2, 131081, 262146, 1, 196617, 262146, 2, 393216, 458754, 2, 393221, 589826, 2, 393220, 524290, 2, 393219, 524290, 2, 393218, 524290, 2, 393217, 524290, 2)
layer_1/name = "Dets2"
layer_1/tile_data = PackedInt32Array(393217, 589826, 4, 393218, 589826, 4, 393220, 589826, 4, 393219, 589826, 5, 131079, 786434, 4, 196615, 851970, 6, 65543, 851970, 4, 65542, 851970, 2, 65544, 983042, 2, 6, 851970, 1, 7, 917506, 1, 8, 983042, 1, 0, 917506, 1, 65536, 917506, 2, 1, 983042, 1, 65537, 983042, 2, 196608, 917506, 3, 196609, 983042, 3, 131072, 983042, 5, 131073, 983042, 6)
layer_2/name = "bg"
layer_2/modulate = Color(0.779383, 0.692151, 0.599505, 1)
layer_2/tile_data = PackedInt32Array(589829, 131074, 2, 655363, 131074, 2, 655362, 131074, 2, 655361, 131074, 2, 655360, 131074, 2, 589824, 131074, 2, 655364, 131074, 2, 655365, 131074, 2, 589825, 131074, 2, 589833, 131074, 2, 655369, 131074, 2, 655368, 131074, 2, 655367, 131074, 2, 655366, 131074, 2, 589830, 131074, 2, 589831, 131074, 2, 589832, 131074, 2, 393226, 131072, 6, 458762, 131072, 6, 524298, 131072, 6, 589834, 131072, 6, 655370, 131072, 6, 327690, 131072, 6, 327689, 131072, 6, 327688, 131074, 2, 393224, 131074, 2, 458760, 131074, 2, 327686, 131074, 2, 393222, 131074, 2, 458758, 131074, 2, 458757, 131072, 6, 458756, 131072, 6, 458755, 131072, 6, 458754, 131072, 6, 458753, 131072, 6, 458752, 131072, 6, 262150, 131072, 6, 262151, 131074, 2, 262152, 131074, 2, 262153, 131072, 6, 262154, 131072, 6, 524288, 131074, 2, 524289, 131074, 2, 524290, 131074, 2, 589826, 131074, 2, 589827, 131074, 2, 524291, 131074, 2, 524292, 131074, 2, 589828, 131074, 2, 524293, 131074, 2, 524294, 131074, 2, 524295, 131074, 2, 458759, 131074, 2, 393223, 131074, 2, 327687, 131074, 2, 524296, 131074, 2, 524297, 131074, 2, 458761, 131074, 2, 393225, 131074, 2)
layer_3/name = "MAP"
layer_3/tile_data = PackedInt32Array(458752, 65536, 0, 458753, 131072, 0, 458754, 131072, 0, 458755, 131072, 0, 458756, 131072, 0, 458757, 131072, 0, 458758, 196608, 7, 393221, 393216, 7, 327685, 393216, 7, 262149, 393216, 7, 262150, 65536, 1, 262151, 131072, 0, 262152, 131072, 1, 262153, 196608, 1, 327689, 196608, 7, 327686, 0, 6, 393222, 0, 6, 458760, 0, 7, 327688, 65536, 6, 393224, 0, 6, 655362, 131074, 0, 655363, 131074, 0, 655364, 131074, 0, 589824, 65538, 0, 589825, 196610, 1, 589833, 196610, 0, 589829, 65538, 1, 589830, 131074, 0, 589831, 131074, 0, 589832, 131074, 0, 655361, 65538, 3, 655365, 196610, 3)
layer_4/name = "Grid"
layer_4/modulate = Color(1, 1, 1, 0.564706)
layer_4/tile_data = PackedInt32Array(458752, 3, 0, 458753, 65539, 0, 458754, 65539, 0, 458755, 65539, 0, 458756, 65539, 0, 458757, 65539, 0, 458758, 131075, 7, 393222, 3, 4, 327686, 3, 4, 262150, 3, 1, 262151, 65539, 0, 262153, 131075, 1, 262152, 65539, 1, 327688, 3, 6, 327689, 131075, 7, 393224, 3, 4, 458760, 3, 5, 589824, 3, 0, 655361, 3, 7, 655362, 65539, 0, 655363, 65539, 0, 655364, 65539, 0, 655365, 131075, 7, 589829, 3, 1, 589830, 65539, 0, 589831, 65539, 0, 589832, 65539, 0, 589833, 131075, 0, 589825, 131075, 1)

[node name="Boundaries" parent="Control" instance=ExtResource("4_1yse3")]

[node name="FinishFlag" parent="Control" instance=ExtResource("3_b4raj")]
position = Vector2(576, 144)

[node name="FinishFlag2" parent="Control" instance=ExtResource("3_b4raj")]
position = Vector2(648, 504)

[node name="Key" parent="Control" instance=ExtResource("5_y44ej")]
position = Vector2(288, 432)

[node name="KeyBox" parent="Control" instance=ExtResource("6_tmlms")]
position = Vector2(432, 576)

[node name="Character1" parent="Control" instance=ExtResource("4_et8nv")]
position = Vector2(0, 432)

[node name="Character2" parent="Control" instance=ExtResource("5_e4x80")]
position = Vector2(0, 576)

[node name="Wall" parent="Control" instance=ExtResource("9_bhnom")]
position = Vector2(504, 432)

[node name="UI" parent="." instance=ExtResource("6_hdfye")]
layout_mode = 1
metadata/_edit_use_anchors_ = true
